# hyq-description

./: .gitlab-ci.yml  .project  CMakeLists.txt  README.md  mainpage.dox  package.xml
gazebo/: empty.world  gazebo.urdf.xacro  gazebo_centaur1arm.urdf.xacro
hyq_description/: CMakeLists.txt
hyq_description/gazebo/: gazebo.urdf.xacro  gazebo.urdf.xacro~
hyq_description/launch/: hyq_controller.launch~  hyq_empty_world.launch  hyq_empty_world.launch~  hyq_rviz.launch  hyq_rviz.launch~  upload_hyq.launch  upload_hyq.launch~
hyq_description/meshes/leg/: hip.dae  hip.dae~  lower.dae  lower.dae~  upper.dae  upper.dae~
hyq_description/meshes/sensors/: asus_xtion.dae  kinect.dae  velodyne_hdl32e.dae
hyq_description/meshes/trunk/: frame.dae  frame.stl  frame2.dae~  trunk.dae  trunk.dae~  trunk_frame.dae
hyq_description/robcogen/: hyq.kindsl
hyq_description/robots/: hyq.urdf.xacro  hyq.urdf.xacro~  hyq_gazebo.urdf.xacro
hyq_description/rviz_confs/: hyq_model_tf.rviz
hyq_description/urdfs/: HyQ_meshes.urdf  HyQ_meshes.urdf~  common.xacro  common.xacro~  common_gazebo.xacro
hyq_description/urdfs/leg/: leg.gazebo.xacro  leg.gazebo.xacro~  leg.transmission.xacro  leg.transmission.xacro~  leg.urdf.xacro  leg.urdf.xacro~
hyq_description/urdfs/sensors/: asus_xtion.gazebo.xacro  asus_xtion.gazebo.xacro~  asus_xtion.urdf.xacro  asus_xtion.urdf.xacro~  bumblebee.urdf.xacro  kinect.gazebo.xacro~  kinect.urdf.xacro  kinect.urdf.xacro~  microstrain_3dmgx325_imu.urdf.xacro  microstrain_3dmgx325_imu.urdf.xacro~  ptu_d46.transmission.xacro  ptu_d46.urdf.xacro  sensors.urdf.xacro~  stereo_camera.gazebo.xacro  velodyne.gazebo.xacro~  velodyne.urdf.xacro  velodyne.urdf.xacro~  vicon.urdf.xacro
hyq_description/urdfs/trunk/: trunk.gazebo.xacro  trunk.urdf.xacro  trunk.urdf.xacro~
hyq_description/util/notes/: scanning with the ptu  using the ps3joy with hyq 
hyq_description/util/scripts/: cmd_scan
hyq_environments/hyq_big_rock/: model.config~  model.sdf  model.sdf~
hyq_environments/hyq_small_rock/: model.config  model.config~  model.sdf  model.sdf~
hyq_environments/hyq_tree/: model.config  model.config~  model.sdf  model.sdf~
hyq_gazebo/: CMakeLists.txt  package.xml  package.xml~
hyq_gazebo/launch/: hyq.launch  hyq.launch~  push_command  push_trunk.launch~  set_model
launch/: hyq_empty_world.launch  hyq_rviz.launch  realsense.launch  realsense2.launch  rviz.launch  upload.launch  upload_hyq.launch  upload_hyq_model.launch  world.launch
meshes/: calibration_plate.dae
meshes/leg/: hipassembly.stl  lowerleg.stl  upperleg.stl
meshes/trunk/: trunk.dae  trunk.stl
robcogen/: hyq.dtdsl  hyq.kindsl
robots/: hyq.srdf.xacro  hyq.urdf  hyq.urdf.xacro  hyq_model.urdf.xacro  hyq_model_ordered.urdf.xacro  hyq_no_sensors.urdf.xacro  hyq_with_arms.urdf.xacro
rviz/: hyq_model_tf.rviz  kvh_1775_frames.rviz  microstrain_gx425_frames.rviz
scripts/: go0
urdfs/: calibration_plate.urdf.xacro  common.xacro
urdfs/arm/: arm.transmission.xacro
urdfs/cart/: car.transmission.xacro  car.urdf.xacro  cart.transmission.xacro  cart.urdf.xacro
urdfs/leg/: calibration_plate.urdf.xacro  car.urdf.xacro  cart.urdf.xacro  cart1.urdf.xacro  cart2.urdf.xacro  leg.gazebo.xacro  leg.transmission.xacro  leg.urdf.xacro  new_calibration_plate.urdf.xacro
urdfs/sensors/: asus_xtion.gazebo.xacro  asus_xtion.urdf.xacro  bumblebee.urdf.xacro  hokuyo_laser.urdf.xacro  microstrain_3dmgx325_imu.gazebo.xacro  microstrain_3dmgx325_imu.urdf.xacro  microstrain_3dmgx425_imu.gazebo.xacro  microstrain_3dmgx425_imu.urdf.xacro  multisense_sl.gazebo.xacro  multisense_sl.urdf.xacro  ptu_d46.urdf.xacro  stereo_camera.gazebo.xacro  teraranger_range.gazebo.xacro  teraranger_range.urdf.xacro  velodyne.urdf.xacro  vicon.urdf.xacro  vislab_3dve.urdf.xacro
urdfs/trunk/: trunk.gazebo.xacro  trunk.urdf.xacro  trunk_model.urdf.xacro
worlds/: empty.world
yarf/: hyq.yarf  hyq_ordered.yarf
(+3 files in other folders)
