<package>
  <name>hyq_description</name>
  <version>0.1.2</version>
  <description>
	This package contains the description (mechanical, kinematic, visual,
  etc.) of the HyQ robot. The files in this package are parsed and used by
  a variety of other components. Most users will not interact directly
  with this package.
  </description>
  <maintainer email="carlos.mastalli@iit.it">Carlos Mastalli</maintainer>

  <license>BSD</license>

<!--  <url type="website">http://ros.org/wiki/pr2_description</url>
  <url type="bugtracker">https://github.com/PR2/pr2_common/issues</url>-->

  <author>Carlos Mastalli</author>
  <author>Ioannis Havoutis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>convex_decomposition</build_depend>
  <build_depend>ivcon</build_depend>

  <run_depend>xacro</run_depend>

  <test_depend>gtest</test_depend>
  <test_depend>urdfdom</test_depend>
</package>
